tests/fail/missing_params.rs
fn main() {
    sscanf::sscanf!();
    sscanf::sscanf!("5");
    sscanf::sscanf!("5",);
    sscanf::sscanf_get_regex!();
    sscanf::sscanf_unescaped!();
}
