tests/fail/missing_params.stderr
error: At least 2 Parameters required: Input and format string
 --> tests/fail/missing_params.rs:2:5
  |
2 |     sscanf::sscanf!();
  |     ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `sscanf::sscanf` (in Nightly builds, run with -Z macro-backtrace for more info)

error: At least 2 Parameters required: Missing format string
 --> tests/fail/missing_params.rs:3:5
  |
3 |     sscanf::sscanf!("5");
  |     ^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `sscanf::sscanf` (in Nightly builds, run with -Z macro-backtrace for more info)

error: At least 2 Parameters required: Missing format string
 --> tests/fail/missing_params.rs:4:24
  |
4 |     sscanf::sscanf!("5",);
  |                        ^

error: Missing format string
 --> tests/fail/missing_params.rs:5:5
  |
5 |     sscanf::sscanf_get_regex!();
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `sscanf::sscanf_get_regex` (in Nightly builds, run with -Z macro-backtrace for more info)

error: At least 2 Parameters required: Input and format string
 --> tests/fail/missing_params.rs:6:5
  |
6 |     sscanf::sscanf_unescaped!();
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `sscanf::sscanf_unescaped` (in Nightly builds, run with -Z macro-backtrace for more info)
